--- a/src/sass/components/_writing-piece.scss
+++ b/src/sass/components/_writing-piece.scss
@@ -16,6 +16,11 @@
     word-wrap: break-word;
     overflow: scroll;
 
+    &::scrollbar {
+        display: none;
+    }
+
+
     &-container {
         min-width: 30%;
       
@@ -49,6 +54,8 @@
         word-wrap: break-word;
         width: 100%;
         flex-grow: 1;
+
+
     }
 
 }
